--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.nhind</groupId>
 	<artifactId>config-service-client</artifactId>
-	<version>6.0</version>
+	<version>6.0.0.1</version>
 	<packaging>jar</packaging>
 	<name>NHIN Direct Java config service client proxy</name>
     <description>NHIN Direct Java config service client proxy</description>
@@ -11,7 +11,7 @@
 	<parent>
 	   <groupId>org.springframework.boot</groupId>
 	   <artifactId>spring-boot-dependencies</artifactId>
-	   <version>2.1.2.RELEASE</version>
+	   <version>2.7.18</version>
 	</parent>		
 	<scm>
 		<url>scm:git:https://github.com/DirectProjectJavaRI/config-service-client.git</url>
@@ -40,13 +40,15 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring-cloud-dependencies.version>Greenwich.RELEASE</spring-cloud-dependencies.version>
+<!--		<hibernate.version>5.3.22.Final</hibernate.version>-->
 	</properties>	
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>${spring-cloud-dependencies.version}</version>
+<!--				<version>${spring-cloud-dependencies.version}</version>-->
+				<version>2021.0.8</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>		
@@ -60,12 +62,12 @@
         <dependency>
             <groupId>org.nhind</groupId>
             <artifactId>config-model</artifactId>
-            <version>6.0</version>
+            <version>6.0.0.1</version>
         </dependency>  	
         <dependency>
             <groupId>org.nhind</groupId>
             <artifactId>direct-common</artifactId>
-            <version>6.0</version>		          
+            <version>6.0.1.1</version>
         </dependency>  
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
@@ -85,7 +87,7 @@
 		<dependency>
 		    <groupId>org.apache.camel</groupId>
 		    <artifactId>camel-spring-boot-starter</artifactId>
-		    <version>2.22.0</version>
+		    <version>2.25.4</version>
 		    <scope>test</scope>		    
 		</dependency>					      		  					
 		<dependency>
@@ -108,7 +110,7 @@
         <dependency>
             <groupId>org.nhind</groupId>
             <artifactId>config-service-jar</artifactId>
-            <version>6.0</version>
+            <version>6.0.4.1</version>
             <scope>test</scope>           
         </dependency>  	
         <dependency>
@@ -120,7 +122,17 @@
 		    <groupId>com.h2database</groupId>
 		    <artifactId>h2</artifactId>
 		    <scope>test</scope>
-		</dependency>	    		        						
+		</dependency>
+		<dependency>
+			<groupId>org.junit.vintage</groupId>
+			<artifactId>junit-vintage-engine</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<pluginManagement>
@@ -148,30 +160,30 @@
 		        </executions>
 		      </plugin>  		
 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.6.1</version>
-				<configuration>
-				    <additionalparam>-Xdoclint:none</additionalparam>
-					<charset>UTF-8</charset>
-					<docencoding>UTF-8</docencoding>
-					<docfilessubdirs>true</docfilessubdirs>
-					<detectJavaApiLink>true</detectJavaApiLink>
-					<detectLinks>true</detectLinks>
-					<source>1.8</source>
-					<show>public</show>
-				</configuration>
-	            <executions>
-	              <execution>
-	                <phase>package</phase>
-	                <id>attach-javadocs</id>
-	                <goals>
-	                  <goal>jar</goal>
-	                </goals>
-	              </execution>
-	            </executions>					
-			</plugin>	
+<!--			<plugin>-->
+<!--				<groupId>org.apache.maven.plugins</groupId>-->
+<!--				<artifactId>maven-javadoc-plugin</artifactId>-->
+<!--				<version>2.6.1</version>-->
+<!--				<configuration>-->
+<!--				    <additionalparam>-Xdoclint:none</additionalparam>-->
+<!--					<charset>UTF-8</charset>-->
+<!--					<docencoding>UTF-8</docencoding>-->
+<!--					<docfilessubdirs>true</docfilessubdirs>-->
+<!--					<detectJavaApiLink>true</detectJavaApiLink>-->
+<!--					<detectLinks>true</detectLinks>-->
+<!--					<source>1.8</source>-->
+<!--					<show>public</show>-->
+<!--				</configuration>-->
+<!--	            <executions>-->
+<!--	              <execution>-->
+<!--	                <phase>package</phase>-->
+<!--	                <id>attach-javadocs</id>-->
+<!--	                <goals>-->
+<!--	                  <goal>jar</goal>-->
+<!--	                </goals>-->
+<!--	              </execution>-->
+<!--	            </executions>					-->
+<!--			</plugin>	-->
 			<!--  for releases only 					
 	        <plugin>
                <groupId>org.apache.maven.plugins</groupId>
